--- a/benchbnb/benchbnb/Gemfile
+++ b/benchbnb/benchbnb/Gemfile
@@ -33,6 +33,8 @@ gem 'bcrypt', '~> 3.1.7'
 
 gem 'jquery-rails'
 
+gem 'figaro'
+
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
